# ci40-sesame-door-simulator

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
